--- a/src/popup.html
+++ b/src/popup.html
@@ -5,27 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Vocafy Login</title>
     <style>
+      @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap");
+
       :root {
-        --bg: #0f172a;
-        --panel: #111827;
-        --panel-2: #0b1220;
-        --text: #e5e7eb;
-        --muted: #94a3b8;
-        --accent: #22c55e;
-        --accent-2: #16a34a;
-        --danger: #f87171;
-        --ring: rgba(34, 197, 94, 0.4);
+        color-scheme: light dark;
+        --bg: #eef3fb;
+        --panel: #ffffff;
+        --panel-2: #f4f7ff;
+        --text: #0f172a;
+        --muted: #64748b;
+        --accent: #4f46e5;
+        --accent-2: #3b82f6;
+        --accent-3: #10b981;
+        --danger: #ef4444;
+        --ring: rgba(79, 70, 229, 0.25);
+        --border: rgba(15, 23, 42, 0.12);
+        --shadow: 0 20px 45px rgba(30, 41, 59, 0.12);
+      }
+
+      @media (prefers-color-scheme: dark) {
+        :root {
+          --bg: #0c1220;
+          --panel: #0f172a;
+          --panel-2: #0b1424;
+          --text: #f8fafc;
+          --muted: #94a3b8;
+          --accent: #6366f1;
+          --accent-2: #22d3ee;
+          --accent-3: #22c55e;
+          --danger: #f87171;
+          --ring: rgba(99, 102, 241, 0.35);
+          --border: rgba(148, 163, 184, 0.2);
+          --shadow: 0 18px 40px rgba(0, 0, 0, 0.35);
+        }
       }
 
       * { box-sizing: border-box; }
       body {
         margin: 0;
         min-width: 320px;
-        font-family: "DM Sans", system-ui, -apple-system, Segoe UI, sans-serif;
+        font-family: "Space Grotesk", "Plus Jakarta Sans", system-ui, -apple-system,
+          "Segoe UI", sans-serif;
         color: var(--text);
         background:
-          radial-gradient(120% 120% at 90% 10%, #1f2937 0%, transparent 50%),
-          radial-gradient(120% 120% at 10% 90%, #0b3b2a 0%, transparent 45%),
+          radial-gradient(120% 120% at 90% 10%, rgba(99, 102, 241, 0.18) 0%, transparent 55%),
+          radial-gradient(120% 120% at 10% 90%, rgba(16, 185, 129, 0.18) 0%, transparent 55%),
           var(--bg);
       }
 
@@ -35,10 +59,10 @@
 
       .card {
         background: linear-gradient(180deg, var(--panel), var(--panel-2));
-        border: 1px solid rgba(148, 163, 184, 0.15);
-        border-radius: 16px;
-        padding: 16px;
-        box-shadow: 0 12px 30px rgba(0, 0, 0, 0.35);
+        border: 1px solid var(--border);
+        border-radius: 18px;
+        padding: 18px;
+        box-shadow: var(--shadow);
       }
 
       .brand {
@@ -52,15 +76,15 @@
         width: 32px;
         height: 32px;
         border-radius: 10px;
-        background: linear-gradient(135deg, #22c55e, #10b981);
+        background: linear-gradient(135deg, #6366f1, #22d3ee);
         display: grid;
         place-items: center;
-        color: #08110c;
+        color: #0b1120;
         font-weight: 700;
       }
 
       h1 {
-        font-size: 16px;
+        font-size: 17px;
         margin: 0;
         letter-spacing: 0.3px;
       }
@@ -85,12 +109,18 @@
       input {
         width: 100%;
         padding: 10px 12px;
-        border-radius: 10px;
-        border: 1px solid rgba(148, 163, 184, 0.2);
-        background: rgba(15, 23, 42, 0.8);
+        border-radius: 12px;
+        border: 1px solid var(--border);
+        background: rgba(255, 255, 255, 0.7);
         color: var(--text);
         outline: none;
         transition: border 0.2s, box-shadow 0.2s;
+      }
+
+      @media (prefers-color-scheme: dark) {
+        input {
+          background: rgba(15, 23, 42, 0.85);
+        }
       }
 
       input:focus {
@@ -140,19 +170,20 @@
 
       .btn {
         border: 0;
-        border-radius: 12px;
-        padding: 10px 12px;
+        border-radius: 999px;
+        padding: 11px 14px;
         font-weight: 600;
         cursor: pointer;
       }
 
       .btn-primary {
         background: linear-gradient(135deg, var(--accent), var(--accent-2));
-        color: #06130b;
+        color: #0b1120;
+        box-shadow: 0 12px 24px rgba(79, 70, 229, 0.2);
       }
 
       .btn-ghost {
-        background: rgba(148, 163, 184, 0.1);
+        background: rgba(148, 163, 184, 0.12);
         color: var(--text);
       }
 
