--- a/src/popup.html
+++ b/src/popup.html
@@ -15,41 +15,45 @@
         --text: #0f172a;
         --muted: #64748b;
         --accent: #4f46e5;
-        --accent-2: #3b82f6;
+        --accent-2: #6366f1;
         --accent-3: #10b981;
         --danger: #ef4444;
         --ring: rgba(79, 70, 229, 0.25);
         --border: rgba(15, 23, 42, 0.12);
         --shadow: 0 20px 45px rgba(30, 41, 59, 0.12);
+        --badge-bg: rgba(79, 70, 229, 0.12);
+        --badge-border: rgba(79, 70, 229, 0.2);
       }
 
       @media (prefers-color-scheme: dark) {
         :root {
-          --bg: #0c1220;
+          --bg: #0c1221;
           --panel: #0f172a;
-          --panel-2: #0b1424;
+          --panel-2: #0b1324;
           --text: #f8fafc;
           --muted: #94a3b8;
-          --accent: #6366f1;
-          --accent-2: #22d3ee;
+          --accent: #7c83ff;
+          --accent-2: #5a6bff;
           --accent-3: #22c55e;
           --danger: #f87171;
           --ring: rgba(99, 102, 241, 0.35);
           --border: rgba(148, 163, 184, 0.2);
           --shadow: 0 18px 40px rgba(0, 0, 0, 0.35);
+          --badge-bg: rgba(99, 102, 241, 0.18);
+          --badge-border: rgba(99, 102, 241, 0.25);
         }
       }
 
       * { box-sizing: border-box; }
       body {
         margin: 0;
-        min-width: 320px;
+        min-width: 340px;
         font-family: "Space Grotesk", "Plus Jakarta Sans", system-ui, -apple-system,
           "Segoe UI", sans-serif;
         color: var(--text);
         background:
-          radial-gradient(120% 120% at 90% 10%, rgba(99, 102, 241, 0.18) 0%, transparent 55%),
-          radial-gradient(120% 120% at 10% 90%, rgba(16, 185, 129, 0.18) 0%, transparent 55%),
+          radial-gradient(120% 120% at 90% 10%, rgba(99, 102, 241, 0.2) 0%, transparent 55%),
+          radial-gradient(120% 120% at 10% 90%, rgba(16, 185, 129, 0.16) 0%, transparent 55%),
           var(--bg);
       }
 
@@ -58,10 +62,12 @@
       }
 
       .card {
+        position: relative;
+        overflow: hidden;
         background: linear-gradient(180deg, var(--panel), var(--panel-2));
         border: 1px solid var(--border);
-        border-radius: 18px;
-        padding: 18px;
+        border-radius: 20px;
+        padding: 18px 18px 16px;
         box-shadow: var(--shadow);
       }
 
@@ -69,14 +75,14 @@
         display: flex;
         align-items: center;
         gap: 10px;
-        margin-bottom: 12px;
+        margin-bottom: 14px;
       }
 
       .logo {
         width: 32px;
         height: 32px;
         border-radius: 10px;
-        background: linear-gradient(135deg, #6366f1, #22d3ee);
+        background: linear-gradient(135deg, #6d7bff, #15d0a5);
         display: grid;
         place-items: center;
         color: #0b1120;
@@ -84,7 +90,7 @@
       }
 
       h1 {
-        font-size: 17px;
+        font-size: 18px;
         margin: 0;
         letter-spacing: 0.3px;
       }
@@ -95,75 +101,49 @@
         font-size: 12px;
       }
 
-      label {
-        display: block;
-        font-size: 12px;
-        margin: 10px 0 6px;
-        color: var(--muted);
-      }
-
-      .field {
-        position: relative;
-      }
-
-      input {
-        width: 100%;
-        padding: 10px 12px;
-        border-radius: 12px;
-        border: 1px solid var(--border);
-        background: rgba(255, 255, 255, 0.7);
-        color: var(--text);
-        outline: none;
-        transition: border 0.2s, box-shadow 0.2s;
-      }
-
-      @media (prefers-color-scheme: dark) {
-        input {
-          background: rgba(15, 23, 42, 0.85);
-        }
-      }
-
-      input:focus {
-        border-color: var(--accent);
-        box-shadow: 0 0 0 3px var(--ring);
-      }
-
-      .toggle {
-        position: absolute;
-        right: 8px;
-        top: 8px;
-        font-size: 11px;
-        background: transparent;
-        border: 0;
-        color: var(--muted);
-        cursor: pointer;
-      }
-
-      .row {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        margin-top: 10px;
-      }
-
-      .checkbox {
-        display: flex;
+      .badge {
+        display: inline-flex;
         align-items: center;
         gap: 6px;
-        font-size: 12px;
-        color: var(--muted);
+        padding: 6px 10px;
+        border-radius: 999px;
+        font-size: 11px;
+        font-weight: 600;
+        color: var(--accent);
+        background: var(--badge-bg);
+        border: 1px solid var(--badge-border);
+        margin: 4px 0 10px;
       }
 
-      .checkbox input { width: auto; }
+      .hero {
+        text-align: center;
+        margin-bottom: 14px;
+      }
 
-      .link {
-        color: #86efac;
+      .hero-title {
+        font-size: 20px;
+        line-height: 1.25;
+        margin: 0 0 8px;
+        letter-spacing: -0.01em;
+      }
+
+      .hero-title .accent {
+        color: var(--accent);
+      }
+
+      .hero-title .accent-2 {
+        color: var(--accent-3);
+      }
+
+      .hero-desc {
+        margin: 0;
+        color: var(--muted);
         font-size: 12px;
-        text-decoration: none;
+        line-height: 1.5;
       }
 
       .actions {
-        margin-top: 14px;
+        margin-top: 10px;
         display: grid;
         gap: 8px;
       }
@@ -182,6 +162,12 @@
         box-shadow: 0 12px 24px rgba(79, 70, 229, 0.2);
       }
 
+      .btn-primary::after {
+        content: "→";
+        margin-left: 8px;
+        font-weight: 700;
+      }
+
       .btn-ghost {
         background: rgba(148, 163, 184, 0.12);
         color: var(--text);
@@ -192,6 +178,7 @@
         font-size: 12px;
         color: var(--muted);
         min-height: 16px;
+        text-align: center;
       }
 
       .status.error { color: var(--danger); }
@@ -209,8 +196,19 @@
           </div>
         </div>
 
+        <div class="hero">
+          <div class="badge">AI-Powered Vocabulary Learning</div>
+          <h2 class="hero-title">
+            Học từ vựng <span class="accent">trực quan</span> và
+            <span class="accent-2">đơn giản</span>
+          </h2>
+          <p class="hero-desc">
+            Trải nghiệm học nhanh với gợi ý thông minh và đồng bộ dữ liệu mọi lúc.
+          </p>
+        </div>
+
         <div class="actions">
-          <button class="btn btn-primary" type="button" id="google-login">Đăng nhập với Google</button>
+          <button class="btn btn-primary" type="button" id="google-login">Bắt đầu miễn phí</button>
           <button class="btn btn-ghost" type="button" id="sign-out">Đăng xuất</button>
         </div>
 
