--- a/src/popup.html
+++ b/src/popup.html
@@ -82,17 +82,18 @@
       .card {
         position: relative;
         overflow: hidden;
-        background: linear-gradient(180deg, var(--panel), var(--panel-2));
-        border: 1px solid var(--border);
+        background: transparent;
+        border: 0;
         border-radius: 0;
         padding: 18px 18px 16px;
-        box-shadow: var(--shadow);
+        box-shadow: none;
       }
 
       .theme-toggle {
         position: absolute;
         top: 10px;
         right: 10px;
+        z-index: 2;
         border: 1px solid var(--border);
         background: var(--panel);
         color: var(--text);
@@ -110,15 +111,10 @@
         margin-bottom: 14px;
       }
 
-      .logo {
-        width: 32px;
-        height: 32px;
-        border-radius: 10px;
-        background: linear-gradient(135deg, #6d7bff, #15d0a5);
-        display: grid;
-        place-items: center;
-        color: #0b1120;
-        font-weight: 700;
+      .logo-full {
+        height: 28px;
+        width: auto;
+        display: block;
       }
 
       h1 {
@@ -222,7 +218,7 @@
       <button class="theme-toggle" type="button" id="theme-toggle">Tối</button>
       <div class="card">
         <div class="brand">
-          <div class="logo">V</div>
+          <img class="logo-full" src="icons/logoFull.png" alt="Vocafy" />
           <div>
             <h1>Vocafy</h1>
             <p class="subtitle">Đăng nhập để đồng bộ từ vựng</p>
