--- a/src/popup.html
+++ b/src/popup.html
@@ -89,11 +89,15 @@
         box-shadow: none;
       }
 
+      .topbar {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        gap: 8px;
+        margin-bottom: 10px;
+      }
+
       .theme-toggle {
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        z-index: 2;
         border: 1px solid var(--border);
         background: var(--panel);
         color: var(--text);
@@ -104,29 +108,24 @@
         cursor: pointer;
       }
 
-      .brand {
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        margin-bottom: 14px;
-      }
-
       .logo-full {
         height: 28px;
         width: auto;
         display: block;
       }
 
-      h1 {
-        font-size: 18px;
-        margin: 0;
-        letter-spacing: 0.3px;
+      .logo-top {
+        border: 1px solid var(--border);
+        background: var(--panel);
+        padding: 6px 10px;
+        border-radius: 12px;
       }
 
       .subtitle {
-        margin: 0 0 14px;
+        margin: 0 0 12px;
         color: var(--muted);
         font-size: 12px;
+        text-align: center;
       }
 
       .badge {
@@ -215,15 +214,15 @@
   </head>
   <body>
     <div class="wrap">
-      <button class="theme-toggle" type="button" id="theme-toggle">Tối</button>
       <div class="card">
-        <div class="brand">
-          <img class="logo-full" src="icons/logoFull.png" alt="Vocafy" />
-          <div>
-            <h1>Vocafy</h1>
-            <p class="subtitle">Đăng nhập để đồng bộ từ vựng</p>
+        <div class="topbar">
+          <button class="theme-toggle" type="button" id="theme-toggle">Tối</button>
+          <div class="logo-top">
+            <img class="logo-full" src="icons/logoFull.png" alt="Vocafy" />
           </div>
         </div>
+
+        <p class="subtitle">Đăng nhập để đồng bộ từ vựng</p>
 
         <div class="hero">
           <div class="badge">AI-Powered Vocabulary Learning</div>
