--- a/src/popup.html
+++ b/src/popup.html
@@ -76,7 +76,7 @@
 
       .wrap {
         position: relative;
-        padding: 16px;
+        padding: 14px 14px 16px;
       }
 
       .card {
@@ -94,7 +94,7 @@
         align-items: center;
         justify-content: space-between;
         gap: 8px;
-        margin-bottom: 10px;
+        margin: -4px -4px 12px;
       }
 
       .theme-toggle {
