feat: use sun moon theme icon

--- a/src/popup.html
+++ b/src/popup.html
@@ -232,7 +232,7 @@
         <div class="logo-top">
           <img class="logo-full" src="icons/logoFull.png" alt="Vocafy" />
         </div>
-        <button class="theme-toggle" type="button" id="theme-toggle">Tối</button>
+          <button class="theme-toggle" type="button" id="theme-toggle" aria-label="Đổi giao diện">☀</button>
       </div>
 
         <div class="content">
