--- a/src/popup.html
+++ b/src/popup.html
@@ -24,6 +24,7 @@
       --shadow: 0 20px 45px rgba(30, 41, 59, 0.12);
       --badge-bg: rgba(79, 70, 229, 0.12);
       --badge-border: rgba(79, 70, 229, 0.2);
+      --toggle-hover: rgba(15, 23, 42, 0.1);
     }
 
     :root[data-theme="dark"] {
@@ -41,6 +42,7 @@
       --shadow: 0 18px 40px rgba(0, 0, 0, 0.35);
       --badge-bg: rgba(99, 102, 241, 0.18);
       --badge-border: rgba(99, 102, 241, 0.25);
+      --toggle-hover: rgba(255, 255, 255, 0.12);
     }
 
     @media (prefers-color-scheme: dark) {
@@ -59,6 +61,7 @@
         --shadow: 0 18px 40px rgba(0, 0, 0, 0.35);
         --badge-bg: rgba(99, 102, 241, 0.18);
         --badge-border: rgba(99, 102, 241, 0.25);
+        --toggle-hover: rgba(255, 255, 255, 0.12);
       }
     }
 
@@ -102,16 +105,27 @@
     }
 
     .theme-toggle {
-      border: 1px solid var(--border);
-      background: var(--panel);
+      border: 0;
+      background: transparent;
       color: var(--text);
       font-size: 11px;
       font-weight: 600;
-      padding: 6px 10px;
+      padding: 6px;
       border-radius: 999px;
       cursor: pointer;
+      display: grid;
+      place-items: center;
     }
 
+    .theme-toggle:hover {
+      background: var(--toggle-hover);
+    }
+
+    .theme-toggle img {
+      width: 18px;
+      height: 18px;
+      display: block;
+    }
     .logo-full {
       height: 28px;
       width: auto;
@@ -232,7 +246,9 @@
         <div class="logo-top">
           <img class="logo-full" src="icons/logoFull.png" alt="Vocafy" />
         </div>
-          <button class="theme-toggle" type="button" id="theme-toggle" aria-label="Đổi giao diện">☀</button>
+          <button class="theme-toggle" type="button" id="theme-toggle" aria-label="Đổi giao diện">
+            <img id="theme-icon" src="icons/SunIcon.png" alt="Sáng" />
+          </button>
       </div>
 
         <div class="content">
