--- a/src/popup.html
+++ b/src/popup.html
@@ -25,7 +25,7 @@
       --badge-bg: rgba(79, 70, 229, 0.12);
       --badge-border: rgba(79, 70, 229, 0.2);
       --toggle-hover: rgba(15, 23, 42, 0.1);
-      --sun-icon-color: #f59e0b;
+      --sun-icon-color: #f4a000;
       --moon-icon-color: var(--accent);
     }
 
@@ -124,14 +124,14 @@
     }
 
     .theme-toggle img {
-      width: 18px;
-      height: 18px;
+      width: 20px;
+      height: 20px;
       display: block;
     }
 
     .theme-icon {
-      width: 18px;
-      height: 18px;
+      width: 20px;
+      height: 20px;
       display: block;
       background-color: var(--sun-icon-color);
       -webkit-mask: no-repeat center / contain;
