feat: toggle marketing on auth

--- a/src/popup.html
+++ b/src/popup.html
@@ -156,8 +156,8 @@
 
     .logout-button {
       position: absolute;
-      right: 12px;
-      bottom: 12px;
+      right: 6px;
+      bottom: 6px;
       border: 1px solid transparent;
       background: transparent;
       padding: 6px;
@@ -308,17 +308,19 @@
       </div>
 
         <div class="content">
-          <p class="subtitle">Đăng nhập để đồng bộ từ vựng</p>
+          <div id="marketing">
+            <p class="subtitle">Đăng nhập để đồng bộ từ vựng</p>
 
-          <div class="hero">
-            <div class="badge">AI-Powered Vocabulary Learning</div>
-            <h2 class="hero-title">
-              Học từ vựng <span class="accent">trực quan</span> và
-              <span class="accent-2">đơn giản</span>
-            </h2>
-            <p class="hero-desc">
-              Trải nghiệm học nhanh với gợi ý thông minh và đồng bộ dữ liệu mọi lúc.
-            </p>
+            <div class="hero">
+              <div class="badge">AI-Powered Vocabulary Learning</div>
+              <h2 class="hero-title">
+                Học từ vựng <span class="accent">trực quan</span> và
+                <span class="accent-2">đơn giản</span>
+              </h2>
+              <p class="hero-desc">
+                Trải nghiệm học nhanh với gợi ý thông minh và đồng bộ dữ liệu mọi lúc.
+              </p>
+            </div>
           </div>
 
           <div class="actions">
