--- a/src/popup.html
+++ b/src/popup.html
@@ -38,6 +38,88 @@
 
         <div id="greeting" class="greeting" hidden></div>
 
+        <div id="vocab-section" class="vocab-section" hidden>
+          <button class="btn btn-ghost" type="button" id="add-vocab-toggle">
+            Thêm từ vựng
+          </button>
+
+          <form id="vocab-form" class="vocab-form" hidden>
+            <div class="form-grid">
+              <div class="field">
+                <label for="term">Từ vựng *</label>
+                <input id="term" name="term" type="text" placeholder="Ví dụ: hello" required />
+              </div>
+
+              <div class="field">
+                <label for="language_code">Ngôn ngữ *</label>
+                <select id="language_code" name="language_code" required>
+                  <option value="">Chọn</option>
+                  <option value="EN">EN</option>
+                  <option value="JA">JA</option>
+                  <option value="VI">VI</option>
+                  <option value="ZH">ZH</option>
+                </select>
+              </div>
+
+              <div class="field">
+                <label for="script_type">Hệ chữ *</label>
+                <select id="script_type" name="script_type" required>
+                  <option value="">Chọn</option>
+                  <option value="LATIN">LATIN</option>
+                  <option value="KANJI">KANJI</option>
+                  <option value="KANA">KANA</option>
+                  <option value="ROMAJI">ROMAJI</option>
+                  <option value="IPA">IPA</option>
+                  <option value="PINYIN">PINYIN</option>
+                </select>
+              </div>
+
+              <div class="field">
+                <label for="meaning_text">Nghĩa</label>
+                <input id="meaning_text" name="meaning_text" type="text" />
+              </div>
+
+              <div class="field">
+                <label for="part_of_speech">Loại từ</label>
+                <select id="part_of_speech" name="part_of_speech">
+                  <option value="">Chọn</option>
+                  <option value="NOUN">NOUN</option>
+                  <option value="VERB">VERB</option>
+                  <option value="ADJ">ADJ</option>
+                  <option value="ADV">ADV</option>
+                  <option value="PRON">PRON</option>
+                  <option value="PREP">PREP</option>
+                  <option value="CONJ">CONJ</option>
+                  <option value="INTERJ">INTERJ</option>
+                  <option value="OTHER">OTHER</option>
+                </select>
+              </div>
+
+              <div class="field">
+                <label for="example_sentence">Ví dụ</label>
+                <input id="example_sentence" name="example_sentence" type="text" />
+              </div>
+
+              <div class="field">
+                <label for="example_translation">Dịch ví dụ</label>
+                <input id="example_translation" name="example_translation" type="text" />
+              </div>
+
+              <div class="field">
+                <label for="note">Ghi chú</label>
+                <input id="note" name="note" type="text" />
+              </div>
+
+              <div class="field">
+                <label for="sort_order">Thứ tự</label>
+                <input id="sort_order" name="sort_order" type="number" min="0" step="1" />
+              </div>
+            </div>
+
+            <button class="btn btn-primary" type="submit">Lưu từ vựng</button>
+          </form>
+        </div>
+
         <div class="actions">
           <button class="btn btn-primary" type="button" id="google-login">Đăng nhập</button>
         </div>
