feat: migrate popup to react

--- a/src/popup.html
+++ b/src/popup.html
@@ -1,142 +1,12 @@
-﻿<!doctype html>
+<!doctype html>
 <html>
-
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Vocafy Login</title>
-  <link rel="stylesheet" href="popup.css" />
-</head>
-
-<body class="auth-loading">
-  <div class="wrap">
-    <div class="card">
-      <div class="topbar">
-        <div class="logo-top">
-          <img class="logo-full" src="icons/logoFull.png" alt="Vocafy" />
-        </div>
-        <button class="theme-toggle" type="button" id="theme-toggle" aria-label="Đổi giao diện">
-          <span id="theme-icon" class="theme-icon sun" aria-hidden="true"></span>
-        </button>
-      </div>
-
-      <div class="content">
-        <div id="marketing">
-          <p class="subtitle">Đăng nhập để đồng bộ từ vựng</p>
-
-          <div class="hero">
-            <div class="badge">AI-Powered Vocabulary Learning</div>
-            <h2 class="hero-title">
-              Học từ vựng <span class="accent">trực quan</span> và
-              <span class="accent-2">đơn giản</span>
-            </h2>
-            <p class="hero-desc">
-              Trải nghiệm học nhanh với gợi ý thông minh và đồng bộ dữ liệu mọi lúc.
-            </p>
-          </div>
-        </div>
-
-        <div id="greeting" class="greeting" hidden></div>
-
-        <div id="vocab-section" class="vocab-section" hidden>
-          <div class="vocab-header">
-            <button class="btn btn-ghost" type="button" id="add-vocab-toggle">
-              Thêm từ vựng
-            </button>
-          </div>
-
-          <div id="vocab-list" class="vocab-list"></div>
-          <div id="vocab-empty" class="vocab-empty" hidden>Chưa có từ vựng.</div>
-
-          <form id="vocab-form" class="vocab-form" hidden>
-            <div class="form-grid">
-              <div class="field">
-                <label for="term">Từ vựng *</label>
-                <input id="term" name="term" type="text" placeholder="Ví dụ: hello" required />
-              </div>
-
-              <div class="field">
-                <label for="language_code">Ngôn ngữ *</label>
-                <select id="language_code" name="language_code" required>
-                  <option value="">Chọn</option>
-                  <option value="EN">EN</option>
-                  <option value="JA">JA</option>
-                  <option value="VI">VI</option>
-                  <option value="ZH">ZH</option>
-                </select>
-              </div>
-
-              <div class="field">
-                <label for="script_type">Hệ chữ *</label>
-                <select id="script_type" name="script_type" required>
-                  <option value="">Chọn</option>
-                  <option value="LATIN">LATIN</option>
-                  <option value="KANJI">KANJI</option>
-                  <option value="KANA">KANA</option>
-                  <option value="ROMAJI">ROMAJI</option>
-                  <option value="IPA">IPA</option>
-                  <option value="PINYIN">PINYIN</option>
-                </select>
-              </div>
-
-              <div class="field">
-                <label for="meaning_text">Nghĩa</label>
-                <input id="meaning_text" name="meaning_text" type="text" />
-              </div>
-
-              <div class="field">
-                <label for="part_of_speech">Loại từ</label>
-                <select id="part_of_speech" name="part_of_speech">
-                  <option value="">Chọn</option>
-                  <option value="NOUN">NOUN</option>
-                  <option value="VERB">VERB</option>
-                  <option value="ADJ">ADJ</option>
-                  <option value="ADV">ADV</option>
-                  <option value="PRON">PRON</option>
-                  <option value="PREP">PREP</option>
-                  <option value="CONJ">CONJ</option>
-                  <option value="INTERJ">INTERJ</option>
-                  <option value="OTHER">OTHER</option>
-                </select>
-              </div>
-
-              <div class="field">
-                <label for="example_sentence">Ví dụ</label>
-                <input id="example_sentence" name="example_sentence" type="text" />
-              </div>
-
-              <div class="field">
-                <label for="example_translation">Dịch ví dụ</label>
-                <input id="example_translation" name="example_translation" type="text" />
-              </div>
-
-              <div class="field">
-                <label for="note">Ghi chú</label>
-                <input id="note" name="note" type="text" />
-              </div>
-            </div>
-
-            <div class="form-actions">
-              <button class="btn btn-ghost" type="button" id="close-vocab-form">Đóng</button>
-              <button class="btn btn-primary" type="submit">Lưu từ vựng</button>
-            </div>
-          </form>
-        </div>
-
-        <div class="actions">
-          <button class="btn btn-primary" type="button" id="google-login">Đăng nhập</button>
-        </div>
-
-        <div class="status" id="status"></div>
-        <div class="status" id="token"></div>
-      </div>
-
-      <button class="logout-button" type="button" id="sign-out" aria-label="Đăng xuất" hidden>
-        <span class="logout-icon" aria-hidden="true"></span>
-      </button>
-    </div>
-  </div>
-  <script type="module" src="popup.js"></script>
-</body>
-
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Vocafy</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/main.tsx"></script>
+  </body>
 </html>
